--- a/index.html
+++ b/index.html
@@ -9,8 +9,22 @@
 
 <body>
     <H1>
-        My Portfolio
+        Taylor Bobb
     </H1>
+    <h2>Software Developer</h2>
+    <hr></hr>
+    <p>My favorite thing about programming is turning nothing into something. I cannot draw, I cannot sew, I cannot paint you beautiful illustrations but with coding I am an artist.</p>
+    <h2><i>Favorite</i></h2>
+    <img alt="Me!"
+    src="https://scontent-lga3-2.cdninstagram.com/v/t51.2885-15/333734936_541693047945672_890321614982994621_n.jpg?stp=dst-jpg_e35_p640x640_sh0.08&_nc_ht=scontent-lga3-2.cdninstagram.com&_nc_cat=100&_nc_ohc=D0EaVXPTaJEAX_E1ey-&edm=AP_V10EBAAAA&ccb=7-5&oh=00_AfC3INtzX27zuXibWtN4YDZi4GnpvElxt4VTpUF1Nwedtg&oe=640B88E0&_nc_sid=4f375e"
+    
+
+
+
+>    
+
+    
+
     <!-- 
       Directions:
         1. Create a DIV element to contain the page content
